tests/src/frontend/syntax/invalid/invalid_as.sk
fun main(): void {
  x: ?Int = Some(0);
  print_string((x as None).toString())
}
